# Ficus

./: .gitignore  Readme.md  Tests.Base.Dockerfile  Tests.Dockerfile  Tests.Python.Dockerfile
src/rust/ficus_backend/: Cargo.toml  build.rs
src/rust/ficus_backend/src/: lib.rs  main.rs
src/rust/ficus_backend/src/event_log/: constants.rs  event.rs  event_log.rs  file_xes_log_reader.rs  mod.rs  reader.rs  xes_event.rs  xes_event_log.rs  xes_log_trace_reader.rs
src/rust/ficus_backend/src/features/: mod.rs
src/rust/ficus_backend/src/grpc/: backend_service.rs  converters.rs  get_context_pipeline.rs  mod.rs
src/rust/ficus_backend/src/pipelines/: activities_parts.rs  aliases.rs  annotations_parts.rs  context.rs  context_keys.rs  context_keys_init.rs  discovery_parts.rs  drawing_parts.rs  filtering_parts.rs  mod.rs  mutations_parts.rs  parts_names.rs  patterns_parts.rs  pipeline_parts.rs  pipelines.rs  types.rs  util_parts.rs  xes_parts.rs
src/rust/ficus_backend/src/utils/: colors.rs  hash_map_utils.rs  hash_utils.rs  mod.rs  suffix_tree.rs  user_data.rs  vec_utils.rs  xml_utils.rs
src/rust/ficus_backend/tests/: analysis_tests.rs  event_log_info_tests.rs  interval_tree_tests.rs  mod.rs  mutations_tests.rs  patterns_tests.rs  repeat_sets_tests.rs  split_tests.rs  suffix_tree_tests.rs  test_simple_event_log.rs  xes_read_write_tests.rs
src/rust/ficus_backend/tests/analysis/: analysis_tests.rs  event_log_info_tests.rs
src/rust/ficus_backend/tests/core/: mod.rs
src/rust/ficus_backend/tests/discovery/: alpha_nfc_plus_plus_tests.rs  alpha_tests.rs  mod.rs  (+1 more)
(+266 files in other folders)
